force-app/main/default/objects/numm__FA_Fixed_Asset__c/numm__FA_Fixed_Asset__c.object-meta.xml
<CustomObject>
    <description>Objet des fiches d&#39;immobilisations</description>
    <label>Fiche</label>
    <nameField>
        <label>Numéro d&#39;immobilisation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fiches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>