force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__AccountDep__c.field-meta.xml
<CustomField>
    <fullName>numm__AccountDep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte d&#39;amortissement</label>
    <referenceTo>numm__AccountingCode__c</referenceTo>
    <relationshipLabel>Fiches (Compte d&#39;amortissement)</relationshipLabel>
    <relationshipName>Fiches1</relationshipName>
    <type>Lookup</type>
</CustomField>