force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__AccountFA__c.field-meta.xml
<CustomField>
    <fullName>numm__AccountFA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte d&#39;immobilisation</label>
    <referenceTo>numm__AccountingCode__c</referenceTo>
    <relationshipLabel>Fiches</relationshipLabel>
    <relationshipName>Fiches</relationshipName>
    <type>Lookup</type>
</CustomField>