force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__AccountingDateDisposal__c.field-meta.xml
<CustomField>
    <fullName>numm__AccountingDateDisposal__c</fullName>
    <label>Date de compta. cession</label>
    <type>Date</type>
</CustomField>