force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__AccountSubsidyExcepDispos__c.field-meta.xml
<CustomField>
    <fullName>numm__AccountSubsidyExcepDispos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compta. dotation excep. cession</label>
    <type>Checkbox</type>
</CustomField>