force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__AlreadyDepUW03__c.field-meta.xml
<CustomField>
    <fullName>numm__AlreadyDepUW03__c</fullName>
    <label>Déja Amorti UO 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>