force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__AmountAlreadyDep02__c.field-meta.xml
<CustomField>
    <fullName>numm__AmountAlreadyDep02__c</fullName>
    <label>Montant déjà amorti fiscal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>