force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__AmountAlreadyDep03__c.field-meta.xml
<CustomField>
    <fullName>numm__AmountAlreadyDep03__c</fullName>
    <label>Montant déjà amorti IFRS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>