force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__AmountDisposal__c.field-meta.xml
<CustomField>
    <fullName>numm__AmountDisposal__c</fullName>
    <label>Prix de cession</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>