force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__AmountExclVAT__c.field-meta.xml
<CustomField>
    <fullName>numm__AmountExclVAT__c</fullName>
    <label>Montant HT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>