force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__AmountInclVAT__c.field-meta.xml
<CustomField>
    <fullName>numm__AmountInclVAT__c</fullName>
    <formula>numm__AmountExclVAT__c + numm__VATAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>