force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__AmountRV3__c.field-meta.xml
<CustomField>
    <fullName>numm__AmountRV3__c</fullName>
    <label>Valeur résiduelle initiale IFRS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>