force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__AmountShortAccount__c.field-meta.xml
<CustomField>
    <fullName>numm__AmountShortAccount__c</fullName>
    <label>Montant court terme comptable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>