force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__AmountShortFiscal__c.field-meta.xml
<CustomField>
    <fullName>numm__AmountShortFiscal__c</fullName>
    <label>Montant court terme fiscal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>