force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__AmountSubsidyExcep__c.field-meta.xml
<CustomField>
    <fullName>numm__AmountSubsidyExcep__c</fullName>
    <label>Montant dotation exceptionnelle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>