force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__AutoGenerateCpt__c.field-meta.xml
<CustomField>
    <fullName>numm__AutoGenerateCpt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutoGenerateCpt</label>
    <type>Checkbox</type>
</CustomField>