force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__AutoGenerateSection__c.field-meta.xml
<CustomField>
    <fullName>numm__AutoGenerateSection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Insertion de la ligne de rubrique</description>
    <label>AutoGenerateSection</label>
    <type>Checkbox</type>
</CustomField>