force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__AutoProcess__c.field-meta.xml
<CustomField>
    <fullName>numm__AutoProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Traitement automatique (cas de reprise, calcul des plans, initialisations...). Utiliser lors de l&#39;insertion (création)</description>
    <label>AutoProcess</label>
    <type>Checkbox</type>
</CustomField>