force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__Baseline__c.field-meta.xml
<CustomField>
    <fullName>numm__Baseline__c</fullName>
    <label>Origine</label>
    <length>20</length>
    <type>Text</type>
</CustomField>