force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__Category__c.field-meta.xml
<CustomField>
    <fullName>numm__Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Catégorie</label>
    <referenceTo>numm__FACategory__c</referenceTo>
    <relationshipName>FA_Fiches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>