force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__DateAlreadyDep01__c.field-meta.xml
<CustomField>
    <fullName>numm__DateAlreadyDep01__c</fullName>
    <label>Date déjà amorti comptable</label>
    <type>Date</type>
</CustomField>