force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__DateAlreadyDep02__c.field-meta.xml
<CustomField>
    <fullName>numm__DateAlreadyDep02__c</fullName>
    <label>Date déjà amorti fiscal</label>
    <type>Date</type>
</CustomField>