force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__DateAlreadyDep03__c.field-meta.xml
<CustomField>
    <fullName>numm__DateAlreadyDep03__c</fullName>
    <label>Date déjà amorti IFRS</label>
    <type>Date</type>
</CustomField>