force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__Description__c.field-meta.xml
<CustomField>
    <fullName>numm__Description__c</fullName>
    <label>Désignation</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>