force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__DescriptionDisposal__c.field-meta.xml
<CustomField>
    <fullName>numm__DescriptionDisposal__c</fullName>
    <label>Libellé de cession</label>
    <length>50</length>
    <type>Text</type>
</CustomField>