force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__DescriptionRV__c.field-meta.xml
<CustomField>
    <fullName>numm__DescriptionRV__c</fullName>
    <label>Libellé VR</label>
    <length>200</length>
    <type>Text</type>
</CustomField>