force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__DisposalCode__c.field-meta.xml
<CustomField>
    <fullName>numm__DisposalCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type de cession</label>
    <referenceTo>numm__FADisposal__c</referenceTo>
    <relationshipName>FA_Fiches</relationshipName>
    <type>Lookup</type>
</CustomField>