force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__DisposalDate__c.field-meta.xml
<CustomField>
    <fullName>numm__DisposalDate__c</fullName>
    <label>Date cession</label>
    <type>Date</type>
</CustomField>