force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__Entity__c.field-meta.xml
<CustomField>
    <fullName>numm__Entity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Entité</label>
    <referenceTo>numm__Entity__c</referenceTo>
    <relationshipLabel>Fiches (Entité)</relationshipLabel>
    <relationshipName>FA_Fiches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>