force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__Establishment__c.field-meta.xml
<CustomField>
    <fullName>numm__Establishment__c</fullName>
    <label>Etablissement</label>
    <referenceTo>numm__Establishment__c</referenceTo>
    <relationshipLabel>Fiches (Etablissement)</relationshipLabel>
    <relationshipName>FA_Fiches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>