force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__Exceptional__c.field-meta.xml
<CustomField>
    <fullName>numm__Exceptional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dérogatoire</label>
    <type>Checkbox</type>
</CustomField>