force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__FARule1__c.field-meta.xml
<CustomField>
    <fullName>numm__FARule1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Règle /durée comptable</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__FARule__c.numm__Locked__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__FARule__c</referenceTo>
    <relationshipLabel>Fiches (Règle /durée)</relationshipLabel>
    <relationshipName>FAFixedAsset1</relationshipName>
    <type>Lookup</type>
</CustomField>