force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__HasPrinc__c.field-meta.xml
<CustomField>
    <fullName>numm__HasPrinc__c</fullName>
    <formula>NOT(ISBLANK(numm__ImmoPrinc__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HasPrinc</label>
    <type>Checkbox</type>
</CustomField>