force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__HeaderV__c.field-meta.xml
<CustomField>
    <fullName>numm__HeaderV__c</fullName>
    <formula>numm__VoucherTransaction__r.numm__Piece__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pièce</label>
    <type>Text</type>
</CustomField>