force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__IdSplit__c.field-meta.xml
<CustomField>
    <fullName>numm__IdSplit__c</fullName>
    <label>IdEclatement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>