force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__ImmoPrinc__c.field-meta.xml
<CustomField>
    <fullName>numm__ImmoPrinc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Immobilisation principale</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>L&#39;immobilisation principale doit être du même établissement et de même catégorie, non cédée</errorMessage>
        <filterItems>
            <field>$Source.numm__Category__c</field>
            <operation>equals</operation>
            <valueField>numm__FA_Fixed_Asset__c.numm__Category__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.numm__Entity__c</field>
            <operation>equals</operation>
            <valueField>numm__FA_Fixed_Asset__c.numm__Entity__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.numm__Establishment__c</field>
            <operation>equals</operation>
            <valueField>numm__FA_Fixed_Asset__c.numm__Establishment__c</valueField>
        </filterItems>
        <filterItems>
            <field>numm__FA_Fixed_Asset__c.numm__HasPrinc__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__FA_Fixed_Asset__c</referenceTo>
    <relationshipLabel>Fiches associées</relationshipLabel>
    <relationshipName>ImmosSecondaires</relationshipName>
    <type>Lookup</type>
</CustomField>