force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__IsBatchPrinc__c.field-meta.xml
<CustomField>
    <fullName>numm__IsBatchPrinc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lot principal</label>
    <type>Checkbox</type>
</CustomField>