force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__LastAccountingDate__c.field-meta.xml
<CustomField>
    <fullName>numm__LastAccountingDate__c</fullName>
    <description>Date de dernière comptabilisation</description>
    <label>Dernière comptabilisation</label>
    <summarizedField>numm__FA_Depreciation__c.numm__AccountingDate__c</summarizedField>
    <summaryForeignKey>numm__FA_Depreciation__c.numm__FA_Fixed_Asset__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>