force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__MontantTVARecup__c.field-meta.xml
<CustomField>
    <fullName>numm__MontantTVARecup__c</fullName>
    <label>Montant TVA Récup.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>