force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__Notes03__c.field-meta.xml
<CustomField>
    <fullName>numm__Notes03__c</fullName>
    <label>Notes03</label>
    <length>200</length>
    <type>Text</type>
</CustomField>