force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__OrigDate__c.field-meta.xml
<CustomField>
    <fullName>numm__OrigDate__c</fullName>
    <label>Date d&#39;origine</label>
    <type>Date</type>
</CustomField>