force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__OrigMt__c.field-meta.xml
<CustomField>
    <fullName>numm__OrigMt__c</fullName>
    <label>Montant d&#39;origine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>