force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__PISDate__c.field-meta.xml
<CustomField>
    <fullName>numm__PISDate__c</fullName>
    <label>Date de M.E.S</label>
    <required>true</required>
    <type>Date</type>
</CustomField>