force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__PurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>numm__PurchaseDate__c</fullName>
    <label>Date d&#39;achat</label>
    <required>true</required>
    <type>Date</type>
</CustomField>