force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__QuantityInit__c.field-meta.xml
<CustomField>
    <fullName>numm__QuantityInit__c</fullName>
    <label>Quantité initiale</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>