force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__Reference__c.field-meta.xml
<CustomField>
    <fullName>numm__Reference__c</fullName>
    <label>Référence</label>
    <length>40</length>
    <type>Text</type>
</CustomField>