force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__SplitDate__c.field-meta.xml
<CustomField>
    <fullName>numm__SplitDate__c</fullName>
    <label>Date d&#39;éclatement</label>
    <type>Date</type>
</CustomField>