force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__SplitDescription__c.field-meta.xml
<CustomField>
    <fullName>numm__SplitDescription__c</fullName>
    <label>Libellé d&#39;éclatement</label>
    <length>50</length>
    <type>Text</type>
</CustomField>