force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__StartAmountDepr01__c.field-meta.xml
<CustomField>
    <fullName>numm__StartAmountDepr01__c</fullName>
    <label>Base d&#39;amortissement comptable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>