force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__StartAmountDepr02__c.field-meta.xml
<CustomField>
    <fullName>numm__StartAmountDepr02__c</fullName>
    <label>Base d&#39;amortissement fiscal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>