force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__StartDate01__c.field-meta.xml
<CustomField>
    <fullName>numm__StartDate01__c</fullName>
    <label>Date de début comptable</label>
    <type>Date</type>
</CustomField>