force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__StartDate02__c.field-meta.xml
<CustomField>
    <fullName>numm__StartDate02__c</fullName>
    <description>Date de début 2</description>
    <label>Date de début fiscal</label>
    <type>Date</type>
</CustomField>