force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__StartDate03__c.field-meta.xml
<CustomField>
    <fullName>numm__StartDate03__c</fullName>
    <label>Date de début IFRS</label>
    <type>Date</type>
</CustomField>