force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__TECHTotAmountRV1__c.field-meta.xml
<CustomField>
    <fullName>numm__TECHTotAmountRV1__c</fullName>
    <description>Montant de la valeur résiduelle final</description>
    <label>TECHTotAmountRV1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>