force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__TECHTotAmountRV3__c.field-meta.xml
<CustomField>
    <fullName>numm__TECHTotAmountRV3__c</fullName>
    <label>TECHTotAmountRV3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>