force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__TotalDotation01__c.field-meta.xml
<CustomField>
    <fullName>numm__TotalDotation01__c</fullName>
    <label>Total Dotation Comptable</label>
    <summarizedField>numm__FA_Depreciation__c.numm__Depreciation01__c</summarizedField>
    <summaryForeignKey>numm__FA_Depreciation__c.numm__FA_Fixed_Asset__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>