force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__TransferEntity__c.field-meta.xml
<CustomField>
    <fullName>numm__TransferEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entité transfert</label>
    <referenceTo>numm__Entity__c</referenceTo>
    <relationshipName>FA_FichesEntTransfert</relationshipName>
    <type>Lookup</type>
</CustomField>