force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__TransfertEstabli__c.field-meta.xml
<CustomField>
    <fullName>numm__TransfertEstabli__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Etablissement transfert</label>
    <referenceTo>numm__Establishment__c</referenceTo>
    <relationshipName>FA_FichesEtaTransfert</relationshipName>
    <type>Lookup</type>
</CustomField>