force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__TransfertFromFA__c.field-meta.xml
<CustomField>
    <fullName>numm__TransfertFromFA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TransfertFromImmo</label>
    <referenceTo>numm__FA_Fixed_Asset__c</referenceTo>
    <relationshipName>FA_FichesTrfFrom</relationshipName>
    <type>Lookup</type>
</CustomField>