force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__TransfertLibelle__c.field-meta.xml
<CustomField>
    <fullName>numm__TransfertLibelle__c</fullName>
    <label>Libellé transfert</label>
    <length>50</length>
    <type>Text</type>
</CustomField>