force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__TransfertToFA__c.field-meta.xml
<CustomField>
    <fullName>numm__TransfertToFA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TransfertToImmo</label>
    <referenceTo>numm__FA_Fixed_Asset__c</referenceTo>
    <relationshipName>FA_FichesTrf</relationshipName>
    <type>Lookup</type>
</CustomField>