force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__Type__c.field-meta.xml
<CustomField>
    <fullName>numm__Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Type</label>
    <referenceTo>numm__FAType__c</referenceTo>
    <relationshipLabel>Fiches</relationshipLabel>
    <relationshipName>FA_Fiches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>