force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__TypeCapitalGainAccount__c.field-meta.xml
<CustomField>
    <fullName>numm__TypeCapitalGainAccount__c</fullName>
    <label>Type Plus-value comptable</label>
    <length>1</length>
    <type>Text</type>
</CustomField>