force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__TypeCapitalGainFiscal__c.field-meta.xml
<CustomField>
    <fullName>numm__TypeCapitalGainFiscal__c</fullName>
    <label>Type Plus-value fiscal</label>
    <length>1</length>
    <type>Text</type>
</CustomField>