force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__TypeDepreciation01__c.field-meta.xml
<CustomField>
    <fullName>numm__TypeDepreciation01__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type d&#39;amortissement Comptable</label>
    <referenceTo>numm__FAParameter__c</referenceTo>
    <relationshipLabel>Fiches (Type d&#39;amortissement Comptable)</relationshipLabel>
    <relationshipName>Fiches1</relationshipName>
    <type>Lookup</type>
</CustomField>