force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__UnitWork01__c.field-meta.xml
<CustomField>
    <fullName>numm__UnitWork01__c</fullName>
    <label>UO01</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>