force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__ValueRent__c.field-meta.xml
<CustomField>
    <fullName>numm__ValueRent__c</fullName>
    <inlineHelpText>Valeur locative / Montant HT</inlineHelpText>
    <label>VL / MT HT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>