force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__VATAmount__c.field-meta.xml
<CustomField>
    <fullName>numm__VATAmount__c</fullName>
    <label>Montant TVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>