force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__VATDisposal__c.field-meta.xml
<CustomField>
    <fullName>numm__VATDisposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Taux de TVA</label>
    <referenceTo>numm__VATRate__c</referenceTo>
    <relationshipName>FA_Fiches</relationshipName>
    <type>Lookup</type>
</CustomField>