force-app/main/default/objects/numm__FA_Fixed_Asset__c/fields/numm__VoucherTransaction__c.field-meta.xml
<CustomField>
    <fullName>numm__VoucherTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pièce Ecriture</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__VoucherTransaction__c.numm__IdAccountingCode__r.numm__Immobilisation__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>numm__VoucherTransaction__c.numm__IdEstablishment__c</field>
            <operation>equals</operation>
            <valueField>$Source.numm__Establishment__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>numm__VoucherTransaction__c</referenceTo>
    <relationshipLabel>Fiches</relationshipLabel>
    <relationshipName>Fiches</relationshipName>
    <type>Lookup</type>
</CustomField>