force-app/main/default/objects/numm__FA_Fixed_Asset__c/validationRules/numm__LongueurNumImmo.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__LongueurNumImmo</fullName>
    <active>true</active>
    <description>La longueur du numéro d&#39;immobilisation doit être inférieur  ou égal à 15</description>
    <errorConditionFormula>LEN(Name)&gt; 15</errorConditionFormula>
    <errorMessage>Le numéro d&#39;immobilisation doit être inférieur ou égal à 15 caractères.</errorMessage>
</ValidationRule>