force-app/main/default/objects/numm__FA_Fixed_Asset__c/validationRules/numm__MtTVARecup.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__MtTVARecup</fullName>
    <active>true</active>
    <description>Si montant de la TVA Recup &gt; MtTVA</description>
    <errorConditionFormula>numm__MontantTVARecup__c &gt; numm__VATAmount__c</errorConditionFormula>
    <errorDisplayField>numm__MontantTVARecup__c</errorDisplayField>
    <errorMessage>Le Montant TVA récupéré doit être inférieur au montant TVA.</errorMessage>
</ValidationRule>